# scan2wall

./: .env  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  EMAIL_INTEGRATION.md  LICENSE  README.md  SETUP.md  SINGLE_INSTANCE_SETUP.md  assets.csv  comfy.sh  modeldownload.sh  pyproject.toml  requirements.txt  run_server.sh  setup.sh  setup_isaac.sh  setup_scan2wall.sh  start.sh  torun.sh
3d_gen/: README.md  __init__.py  comfy.sh  minic.sh  modeldownload.sh  server.py  setup_comfyui.sh  standalone_video.py  wget-log
3d_gen/andrea-nodes/: nodes.py
3d_gen/image_collection/: ml_pipeline.py  run.py  test.py
3d_gen/image_collection/app/: server.py
3d_gen/optnodes/: Inspyrenet_Rembg.py  hunyan_opt_nodes.py  textureGenPipeline.py
3d_gen/utils/: __init__.py  paths.py
3d_gen/workflows/: api_prompt.json  api_prompt_final.json  api_prompt_strcnst_withgradient.json  image-to-texture-mesh.json  image_to_3D_fast.json
ComfyUI/: temp.glb
ComfyUI/input/3d/: Hy21_Mesh_00007_.glb  Hy21_Mesh_00012_.glb
andrea-nodes/: nodes.py
docs/: ARCHITECTURE.md  CLAUDE.md  MINIMAL_ISAAC_INSTALL.md  SINGLE_INSTANCE_SETUP.md
isaac/isaac_scripts/: isaac_worker.py  test_place_obj_video.py
isaac_scripts/: convert_mesh.py  test_place_obj.py  test_place_obj_video.py
scan2wall/: .env.example  __init__.py  __main__.py
scan2wall/scripts/install/: comfyui.sh  isaac.sh  scan2wall.sh
scan2wall/utils/: paths.py
scripts/install/: isaac.sh  scan2wall.sh
src/scan2wall/: standalone_video.py
src/scan2wall/image_collection/: README.md  ml_pipeline.py  requirements.txt  run.py  run_desktop.py
workflows/: image_to_3D_fast.json
(+13 files in other folders)
