[project]
name = "scan2wall"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Max Seeliger", email = "maximilian.seeliger@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.111.0",
    "jinja2>=3.1.4",
    "numpy>=1.24.0",
    "opencv-python>=4.9.0",
    "pillow>=10.3.0",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.9",
    "qrcode>=7.4.2",
    "requests>=2.32.5",
    "uvicorn[standard]>=0.30.0",
]

[project.scripts]
scan2wall = "scan2wall:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
