[project]
name = "scan2wall"
version = "0.1.0"
description = "AI pipeline converting 2D phone photos into 3D physics simulations"
readme = "README.md"
authors = [
    { name = "Andrea Pozzetti", email = "andrea@pozzetti.it" },
    { name = "Max Seeliger", email = "maximilian.seeliger@gmail.com" },
    { name = "Patrick Styll", email = "styllpatrick@gmail.com" },
    { name = "Valentin Vogt", email = "vogtva@student.ethz.ch" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "google-generativeai>=0.8.5",
    "jinja2>=3.1.4",
    "numpy>=1.24.0",
    "opencv-python>=4.9.0",
    "pillow>=10.3.0",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.9",
    "qrcode>=7.4.2",
    "requests>=2.32.5",
    "uvicorn[standard]>=0.30.0",
]

[project.scripts]
scan2wall = "scan2wall:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
